fix:create hotel model
